[gd_scene load_steps=13 format=3 uid="uid://bbtpb3qirf85r"]

[ext_resource type="Script" uid="uid://din7oudqo0q6t" path="res://Objects/HUD/HUD.gd" id="1_3f1ed"]
[ext_resource type="Theme" uid="uid://b87w0gxls3wqd" path="res://Resources/Themes/Button.tres" id="2_ldu36"]
[ext_resource type="Texture2D" uid="uid://b3mrv4hprxaa4" path="res://Textures/UI/Left_Move_Button.png" id="3_txm0u"]
[ext_resource type="Texture2D" uid="uid://b4yxs638ccx72" path="res://Textures/UI/Right_Move_Button.png" id="4_4p43v"]
[ext_resource type="Texture2D" uid="uid://ks3j4ixn84wc" path="res://Textures/UI/MM_Coin_25x40.png" id="5_gcqre"]
[ext_resource type="Texture2D" uid="uid://b6grv5uo25jba" path="res://Textures/UI/Empty_Stars.png" id="5_im2tr"]
[ext_resource type="Texture2D" uid="uid://dvc25hc8s2wqb" path="res://Textures/UI/Full_Stars.png" id="6_gcqre"]

[sub_resource type="Theme" id="Theme_xbi6v"]
Button/font_sizes/font_size = 42

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vucqy"]
size = Vector2(70, 70)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iof4c"]
bg_color = Color(0.69228, 0.72, 0.6408, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.201527, 0.201527, 0.201526, 1)
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_eu2cs"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_gcqre"]
font_size = 32

[node name="Hud" type="Node2D"]
process_mode = 3
script = ExtResource("1_3f1ed")

[node name="Menu" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="ColorRect" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.34, 0.34, 0.34, 0.862745)

[node name="Game" type="VBoxContainer" parent="Menu" groups=["UI"]]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -98.0
offset_right = 291.0
offset_bottom = 98.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Continue" type="Button" parent="Menu/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_ldu36")
text = "Continue
"

[node name="Collection" type="Button" parent="Menu/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_ldu36")
text = "Collection
"

[node name="Save" type="Button" parent="Menu/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_ldu36")
text = "Save
"

[node name="Main Menu" type="Button" parent="Menu/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_ldu36")
text = "Main Menu
"

[node name="Exit" type="Button" parent="Menu/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_ldu36")
text = "Exit
"

[node name="Language" type="VBoxContainer" parent="Menu" groups=["UI"]]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="English" type="Button" parent="Menu/Language"]
layout_mode = 2
theme = ExtResource("2_ldu36")
text = "English"

[node name="Farsi" type="Button" parent="Menu/Language"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_ldu36")
text = "Farsi
"

[node name="Main" type="CanvasLayer" parent="."]

[node name="Menu" type="Button" parent="Main" groups=["UI"]]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.5
offset_right = 80.5
offset_bottom = 53.0
grow_horizontal = 2
size_flags_vertical = 0
theme = SubResource("Theme_xbi6v")
text = "Menu
"

[node name="Start" type="Button" parent="Main" groups=["UI"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.5
offset_top = -53.0
offset_right = 48.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme = SubResource("Theme_xbi6v")
text = "Start
"

[node name="Left" type="TouchScreenButton" parent="Main"]
visible = false
position = Vector2(40, 509)
texture_normal = ExtResource("3_txm0u")
shape = SubResource("RectangleShape2D_vucqy")

[node name="Right" type="TouchScreenButton" parent="Main"]
visible = false
position = Vector2(1049, 509)
texture_normal = ExtResource("4_4p43v")
shape = SubResource("RectangleShape2D_vucqy")

[node name="Level End" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="ColorRect" parent="Level End"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.28485, 0.28485, 0.28485, 0.631373)

[node name="EndDisplay" type="PanelContainer" parent="Level End"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -204.0
offset_right = 133.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iof4c")

[node name="VBoxContainer" type="VBoxContainer" parent="Level End/EndDisplay"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MMCoin" type="HBoxContainer" parent="Level End/EndDisplay/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MMCoinDisplay" type="TextureRect" parent="Level End/EndDisplay/VBoxContainer/MMCoin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_gcqre")

[node name="MMCoinText" type="Label" parent="Level End/EndDisplay/VBoxContainer/MMCoin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "0"
label_settings = SubResource("LabelSettings_eu2cs")
text_direction = 1

[node name="ScoreDisplay" type="TextureProgressBar" parent="Level End/EndDisplay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 3.0
step = 0.01
texture_under = ExtResource("5_im2tr")
texture_progress = ExtResource("6_gcqre")

[node name="ScoreText" type="Label" parent="Level End/EndDisplay/VBoxContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
text = "0  /  3"
label_settings = SubResource("LabelSettings_gcqre")
text_direction = 1

[node name="HSeparator" type="HSeparator" parent="Level End/EndDisplay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Next Level" type="Button" parent="Level End/EndDisplay/VBoxContainer" groups=["UI"]]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(192, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_xbi6v")
text = "Next Level
"

[node name="Restart" type="Button" parent="Level End/EndDisplay/VBoxContainer" groups=["UI"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_xbi6v")
text = "Restart
"

[node name="Main Menu" type="Button" parent="Level End/EndDisplay/VBoxContainer" groups=["UI"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_xbi6v")
text = "Menu
"

[connection signal="pressed" from="Menu/Game/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/Game/Collection" to="." method="_on_collection_pressed"]
[connection signal="pressed" from="Menu/Game/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Menu/Game/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Menu/Game/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Menu/Language/English" to="." method="_on_english_pressed"]
[connection signal="pressed" from="Menu/Language/Farsi" to="." method="_on_farsi_pressed"]
[connection signal="pressed" from="Main/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Level End/EndDisplay/VBoxContainer/Next Level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Level End/EndDisplay/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Level End/EndDisplay/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
